# pkm

./: .gitignore  README.md  TODO.md  get_pkm.py  pyproject-group.toml  pyproject.toml  test.py
docs-builder/: pyproject.toml
docs-builder/etc/pkm/: packages-lock.toml
docs-builder/src/: conf.py  containers.rst  master.rst  projects.rst  tasks.rst  templates.rst
docs-builder/src/_scss/: admonition.scss  docs.scss  emp.scss  fieldlist.scss  layout.scss  syntax.scss
docs-builder/src/_templates/apidoc/: package.rst_t
docs-builder/src/pkm_cli/: commands.rst
docs-builder/tasks/: build_docs.py  compile_scss.py  serve_docs.py
docs-builder/tasks/utils/: compile_scss.py  custom_roles.py  generate_api_docs.py  sphinx_server.py
pkm/: pyproject.toml
pkm-cli/: pyproject.toml
pkm-cli/etc/pkm/: packages-lock.toml
pkm-cli/etc/sphinx/: conf.py  index.rst
pkm-cli/etc/sphinx/_static/: docs.css
pkm-cli/etc/sphinx/api/: pkm_cli.display.progress.rst  pkm_cli.display.rst  pkm_cli.reports.added_repositories_report.rst  pkm_cli.reports.package_report.rst  pkm_cli.reports.report.rst  pkm_cli.reports.rst  pkm_cli.scaffold.doc_generator.rst  pkm_cli.scaffold.engine.rst  pkm_cli.tasks.rst  pkm_cli.tasks.tasks_runner.rst  pkm_cli.utils.context.rst  pkm_cli.utils.rst
pkm-cli/src/: rich_tst.py  test.py  test2_.py  test_.py
pkm-cli/src/pkm_cli/: cli_monitors.py  commands.py  context.py  main.py  monitors.py  pkm_cli.py
pkm-cli/src/pkm_cli/controllers/: prj_controller.py  self_controller.py
pkm-cli/src/pkm_cli/cotrollers/: env_controller.py  self_controller.py
pkm-cli/src/pkm_cli/display/: display.py  progress.py  spinner.py
pkm-cli/src/pkm_cli/dynamic_cli/: help_generator.py  parser.py
pkm-cli/src/pkm_cli/monitors/: dependency_resolution_monitors.py  environment_monitors.py  package_monitors.py  project_monitors.py  repository_monitors.py
pkm-cli/src/pkm_cli/reports/: added_repositories_report.py  environment_report.py  package_report.py  project_report.py  report.py
pkm-cli/src/pkm_cli/scaffold/: doc_generator.py  engine.py
pkm-cli/src/pkm_cli/tasks/: tasks_runner.py
pkm-cli/src/pkm_cli/utils/: clis.py  context.py  method_clis.py
pkm-cli/src/pkm_templates/env/: render.py
pkm-cli/src/pkm_templates/project/: render.py
pkm-cli/src/pkm_templates/project_from_env/: render.py
pkm-cli/src/pkm_templates/task/: render.py
pkm-cli/tasks/: gen_docs.py  serve_docs.py  spx.py
pkm-cli/tests/pkm_cli_tests/utils/: test_dynamic_cli.py
pkm-main/: pyproject.toml  test.py
pkm-main/etc/rp/: lock.toml
pkm-main/pkm_main/environments/: environment_introspection.py  interpreter_introspection.py  standard_environments_zoo.py  virtual_environment.py
pkm-main/pkm_main/installation/: package_installation_plan.py  packages_lock.py  wheel_installer.py
pkm-main/pkm_main/logging/: rich_console.py
pkm-main/pkm_main/projects/: pkm_project.py
pkm-main/pkm_main/repositories/: local_pythons_repository.py  pypi_repository.py
pkm-main/pkm_main/utils/http/: cache_directive.py  http_client.py  mfd_content.py
pkm-main/pkm_main/versions/: pubgrub.py  version.py  version_parser.py  version_specifiers.py
pkm-main/tests/versions/: test_pubgrub.py  test_version.py  test_version_specifiers.py
pkm/api/: __init__.py  buildsys.py  environments.py  packages.py  pkm.py  project.py  repositories.py
pkm/api/dependencies/: dependency.py  env_markers.py
pkm/api/distributions/: wheel_distribution.py
pkm/api/environments/: environment.py  environment_introspection.py  environments_zoo.py  lightweight_environment_builder.py  standard_environments_zoo.py
pkm/api/projects/: project.py  pyproject_configuration.py
pkm/api/repositories/: local_packages_repository.py  local_pythons_repository.py  pypi_repository.py  repository.py  simple_repository.py  source_builds_repository.py
pkm/api/versions/: version.py  version_parser.py  version_specifiers.py
pkm/config/: configuration.py  toml.py
pkm/distributions/: distribution.py  pth_link.py  source_distribution.py  wheel_distribution.py
pkm/etc/pkm/: packages-lock.toml
pkm/logging/: console.py
pkm/resolution/: dependency_resolver.py  packages_lock.py  pubgrub.py
pkm/src/: test.py  test2_.py  test_.py
pkm/src/pkm/api/: buildsys.py  pkm.py
pkm/src/pkm/applications/: application.py  application_builders.py  application_loader.py
pkm/src/pkm/config/: configclass.py  configuration.py  etc_chain.py  toml.py
pkm/src/pkm/distributions/: distribution.py  executables.py  pth_link.py  source_build_cache.py  source_distribution.py  wheel_distribution.py
pkm/src/pkm/launchers/: __init__.py
pkm/src/pkm/pep517_builders/: external_builders.py  pkm_app_builders.py  pkm_builders.py
pkm/src/pkm/project_builders/: application_builders.py  external_builders.py  pkm_builders.py  standard_builders.py
pkm/src/pkm/repositories/: file_system_repository.py  git_repository.py  local_packages_repository.py  local_pythons_repository.py  pypi_repository.py  shared_pacakges_repo.py  simple_repository.py  url_repository.py
pkm/src/pkm/resolution/: dependency_resolver.py  packages_lock.py  pubgrub.py  resolution_monitor.py
pkm/src/pkm/utils/: archives.py  commons.py  ctxman.py  dicts.py  entrypoints.py  enums.py  files.py  formatting.py  hashes.py  ipc.py  iterators.py  monitors.py  parsers.py  pipes.py  processes.py  promises.py  properties.py  resources.py  seqs.py  sequences.py  sets.py  strings.py  symbol.py  types.py
pkm/tests/api/dependencies/: test_dependency.py  (+1 more)
pkm/tests/resolution/: test_pubgrub.py
pkm/utils/: archives.py  commons.py  dicts.py  files.py  functionals.py  hashes.py  io_streams.py  iterators.py  parsing.py  promises.py  properties.py  sequences.py  strings.py  systems.py
pkm/utils/http/: http_client.py  mfd_payload.py
repositories/pkm-conda-repository/: pyproject.toml
repositories/pkm-conda-repository/src/: test_.py
repositories/pkm-torch-repository/: pyproject.toml
repositories/pkm-torch-repository/src/: test_.py
(+643 files in other folders)
