[project]
name = "pkm"
version = "0.3.0"
description = "Package Manager For Python"
authors = [{ name = "bennyl" }]
license.text = "MIT License"
readme.file = "README.md"
requires-python = "~=3.8"
dependencies = []

[tool.pkm.project]
packages = ['pkm']

[build-system]
build-backend = "pkm.api.buildsys"
backend-path = ["."]