[project]
name = "pkm-cli"
version = "0.4.43"
description = "Command line interface for PKM"
readme = "README.md"
requires-python = ">=3.8, <4.0"
authors = [{ name = "bennyl" }]
license.text = "MIT License"
dependencies = [ "questionary",  "pkm",  "jinja2",  "xonsh",  "pygments",  "prompt-toolkit",  "setproctitle;sys_platform != 'win32'",  "rich >=11.1.0, <12"]

[project.scripts]
pkm = "pkm_cli.main:main"

[tool.pkm.distribution]
type = 'cnt-app'

[build-system]
requires = ['pkm >= 0.4.23']
build-backend = "pkm.api.buildsys"