[project]
name = "pkm-cli"
version = "0.4.48"
description = "Command line interface for PKM"
authors = [{ name = "bennyl" }]
requires-python = ">=3.8, <4.0"
dependencies = [
    "questionary", "pkm", "jinja2", "pygments", "prompt-toolkit", "rich >=11.1.0, <12", "cryptography >=37.0.2, <38"]
readme = "README.md"
license.text = "MIT License"

[project.scripts]
pkm = "pkm_cli.main:main"

[build-system]
requires = ["pkm >=0.4.23"]
build-backend = "pkm.api.buildsys"