[tool.poetry]
name = "pkm-main"
version = "0.1.0"
description = "Package Manager For Python"
authors = [ "bennyl"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6"
pkm = {sibling=true}


[build-system]
requires = ["relaxed-poetry-core>=0.3.0"]
build-backend = "poetry.core.masonry.api"