[tool.poetry]
name = "pkm-main"
version = "0.1.0"
description = "Package Manager For Python"
authors = ["bennyl"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
pkm = { sibling = true }
urllib3 = "^1.26.7"
rich = "^10.15.2"
packaging = "^21.3"


[build-system]
requires = ["relaxed-poetry-core>=0.3.0"]
build-backend = "poetry.core.masonry.api"