[project]
name = "pkm"
version = "0.4.60"
description = "Package Manager For Python"
authors = [{ name = "bennyl" }]
requires-python = ">=3.8, <4.0"
dependencies = []
readme.file = "README.md"
license.text = "MIT License"

[build-system]
requires = []
build-backend = "pkm.api.buildsys"
backend-path = ["src"]